final touches and "effects", missing text

--- a/12-10/index.html
+++ b/12-10/index.html
@@ -28,14 +28,14 @@
   </div>
   
   <div class="gameCube">
-    <div class="mainGameScreen">
+    <div class="mainGameScreen" id="deleteScreen">
       <div class="mapIcons">
-        <div class="snowFactory"><a href="../pages/snowFactory.html"><img src="../projectpictures/Icons/snowFactoryIcon.png"></a></div>
-        <div class="hotChocolateBrewery"><a href="../pages/hotChocoLab.html"><img class="bigger" src="../projectpictures/Icons/hotChocolateBreweryIcon.png"></a></div>
-        <div class="elfSchool"><a href="../pages/elfSchool.html"><img class="bigger" src="../projectpictures/Icons/elfSchoolIcon.png"></a></div>
-        <div class="santasHome"><a href="../pages/santasHome.html"><img class="bigger" src="../projectpictures/Icons/santasHomeIcon.png"></a></div>
-        <div class="coalMine"><a href="../pages/coalMine.html"><img class="bigger" src="../projectpictures/Icons/coalMineIcon.png"></a></div>
-        <div class="santasWorkshop"><a href="../pages/santasWorkshop.html"><img class="bigger" src="../projectpictures/Icons/santasWorkshopIcon.png"></a></div>
+        <div class="snowFactory"><a href="../pages/snowFactory.html"><img id='nuked' src="../projectpictures/Icons/snowFactoryIcon.png"></a></div>
+        <div class="hotChocolateBrewery"><a href="../pages/hotChocoLab.html"><img id='nuked2' class="bigger" src="../projectpictures/Icons/hotChocolateBreweryIcon.png"></a></div>
+        <div class="elfSchool"><a href="../pages/elfSchool.html"><img id='nuked3' class="bigger" src="../projectpictures/Icons/elfSchoolIcon.png"></a></div>
+        <div class="santasHome"><a href="../pages/santasHome.html"><img id='nuked4' class="bigger" src="../projectpictures/Icons/santasHomeIcon.png"></a></div>
+        <div class="coalMine"><a href="../pages/coalMine.html"><img id='nuked5' class="bigger" src="../projectpictures/Icons/coalMineIcon.png"></a></div>
+        <div class="santasWorkshop"><a href="../pages/santasWorkshop.html"><img id='nuked6' class="bigger" src="../projectpictures/Icons/santasWorkshopIcon.png"></a></div>
       </div>
     </div>
   </div>
