--- a/12-10/pages/coalMine.html
+++ b/12-10/pages/coalMine.html
@@ -27,7 +27,7 @@
           <a href="#" class="close"></a>
           <a href="#popup2"><img src="../projectpictures/characters/textBox.png"></a>
           <h1 class="characterNames">Snolf Snowler</h1>
-          <p class="characterText">penis</p>
+          <p class="characterText"></p>
         </div>
       </div>
 
@@ -36,7 +36,7 @@
           <a href="#" class="close"></a>
           <a href="#popup3"><img src="../projectpictures/characters/textBox.png"></a>
           <h1 class="characterNames">Snolf Snowler</h1>
-          <p class="characterText">Dick</p>
+          <p class="characterText"></p>
         </div>
       </div>
 
