--- a/12-10/pages/santasWorkshop.html
+++ b/12-10/pages/santasWorkshop.html
@@ -28,7 +28,7 @@
           <a href="#" class="close"></a>
           <a href="#popup2"><img src="../projectpictures/characters/textBox.png"></a>
           <h1 class="characterNames">Oompa</h1>
-          <p class="characterText">penis2</p>
+          <p class="characterText"></p>
         </div>
       </div>
 
@@ -37,7 +37,7 @@
           <a href="#" class="close"></a>
           <a href="#popup3"><img src="../projectpictures/characters/textBox.png"></a>
           <h1 class="characterNames">Oompa</h1>
-          <p class="characterText">Dick2</p>
+          <p class="characterText"></p>
         </div>
       </div>
 
@@ -46,7 +46,7 @@
           <a href="#" class="close"></a>
           <a href="#popup11"><img src="../projectpictures/characters/textBox.png"></a>
           <h1 class="characterNames">Loompa</h1>
-          <p class="characterText">penis2</p>
+          <p class="characterText"></p>
         </div>
       </div>
 
@@ -55,7 +55,7 @@
           <a href="#" class="close"></a>
           <a href="#popup13"><img src="../projectpictures/characters/textBox.png"></a>
           <h1 class="characterNames">Loompa</h1>
-          <p class="characterText">Dick2</p>
+          <p class="characterText"></p>
         </div>
       </div>
 
