--- a/12-10/pages/snowFactory.html
+++ b/12-10/pages/snowFactory.html
@@ -27,7 +27,7 @@
           <a href="#" class="close"></a>
           <a href="#popup2"><img src="../projectpictures/characters/flippedLongerBox.png"></a>
           <h1 class="characterNamesFlipped">Lead S. ball inspector Naglis</h1>
-          <p class="characterText">penis2</p>
+          <p class="characterText"></p>
         </div>
       </div>
 
@@ -36,7 +36,7 @@
           <a href="#" class="close"></a>
           <a href="#popup3"><img src="../projectpictures/characters/flippedLongerBox.png"></a>
           <h1 class="characterNamesFlipped">Lead S. ball inspector Naglis</h1>
-          <p class="characterText">Dick2</p>
+          <p class="characterText"></p>
         </div>
       </div>
 
