some html clean-up

--- a/12-10/index.html
+++ b/12-10/index.html
@@ -87,7 +87,7 @@
         <a href="#popup13"><img src="../projectpictures/characters/longerTextBox.png"></a>
         <h1 class="characterNames">Aleksas The Grinch</h1>
         <div class="characterText">
-          <p>BURNT TREE BURN!!</p>
+          <p>BURN TREE BURN!!</p>
         </div>
       </div>
 
